Modify Jekyll configuration in _config.yml
Updated site settings and added configuration for plugins and Sass.

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,26 @@
-theme: jekyll-theme-minimal
+# Site Settings
 title: Johns Site
-description: Welcome to my website!
+email: johndeltarune25@gmail.com
+description: >- # this means to ignore newlines until "baseurl:"
+  Placeholder
+
+# GitHub Pages URL Settings
+# If your site is at username.github.io/repository-name/, set baseurl to /repository-name
+# If your site is at username.github.io/, leave baseurl as ""
+baseurl: "" 
+url: "https://username.github.io"
+
+# Build Settings
+theme: minima
+# If you are using a specific GitHub Pages supported theme, 
+# it must be listed here.
+remote_theme: jekyll/minima
+
+# Plugins
+plugins:
+  - jekyll-feed
+  - jekyll-seo-tag
+
+# Sass Settings
+sass:
+  style: compressed # Minifies your CSS for faster loading
