Change site title to 'hello!!'

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: My Site
+title: hello!!
 # Remove 'theme' and 'remote_theme' entirely to test
 # This uses the 'Architect' theme which is built into GitHub
 theme: jekyll-theme-architect
